text alignment fixes

--- a/src/pages/BodyStyles.css
+++ b/src/pages/BodyStyles.css
@@ -1,11 +1,11 @@
 .App-body {
   /*background-color: #282c34;*/
   /* background-color: #2292bf; */
-  min-height: calc(100vh - 64px);
+  /* min-height: calc(100vh - 64px); */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10pt + 2vmin);
   /* color: white; */
   /* text-align: center; */
